<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/firstNameNewPersonEditText"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:maxLength="100"
            android:hint="@string/first_name_person"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/lastNameNewPersonEditText"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:maxLength="100"
            android:hint="@string/last_name_person"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/emailNewPersonEditText"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:maxLength="100"
            android:hint="@string/email_person"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordNewPersonEditText"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:maxLength="100"
            android:hint="@string/password_person"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/birthDateNewPersonEditText"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/birth_date_person"
            android:inputType="date" />

        <EditText
            android:id="@+id/heightNewPersonEditText"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/height_person"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/interestsNewPersonEditText"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/interests_person"
            android:inputType="textMultiLine" />

        <CheckBox
            android:id="@+id/verifiedNewPersonCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/verified_person"
            android:textSize="18sp" />

        <Button
            android:id="@+id/newPersonButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_person_activity"
            android:layout_marginTop="16dp" />

    </LinearLayout>
</ScrollView>
