<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/placeNameItemTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Puerto Venecia"
                android:textStyle="bold"
                android:textSize="18sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="8dp"
                    android:text="@string/id_place"
                    android:textColor="#707070"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/placeIdItemTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:textColor="#8E8E8E"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="8dp"
                android:text="@string/address_place"
                android:textColor="#707070"
                android:textSize="15sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/placeAddressItemTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="False Address, 123"
                android:textColor="#8E8E8E"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="8dp"
                android:text="@string/equipment_place"
                android:textColor="#707070"
                android:textSize="15sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/placeEquipmentItemTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="Sample equipment text with some length.  Sample equipment text with some lengthSample equipment text with some lengthSample equipment text with some lengthSample equipment text with some length"
                android:textColor="#8E8E8E"
                android:textSize="15sp" />

        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>
